samples/forcedotcomlabs/chatter-game/src/objects/Achievement__c.object
<CustomObject>
    <description>A point transaction record for a participant being rewarded for completing a goal.</description>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Achievements</relationshipLabel>
        <relationshipName>Achievements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Modified__c</fullName>
        <formula>IF( Object_Id__c != &apos;&apos;, HYPERLINK(&apos;/&apos; +  Object_Id__c , Object_Id__c, &apos;_blank&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Modified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points_Awarded__c</fullName>
        <label>Points Awarded</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Achievement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Acheivement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>